cloud/w10/day-a/policies/constraints/prod/required-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pods-must-have-required-labels
spec:
  enforcementAction: deny

  match:
    namespaces:
      - w10-rbac
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod

  parameters:
    labels:
      - owner
      - environment
