cloud/w10/day-a/policies/constraints/prod/required-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: pods-must-have-resources
spec:
  enforcementAction: deny

  match:
    namespaces:
      - w10-rbac
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod
